--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.18",
+    "@heroicons/react": "v1",
     "autoprefixer": "10.4.14",
     "mongoose": "6.10.0",
     "next": "13.4.2",
