--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "v1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "mongoose": "6.10.0",
     "next": "13.4.2",
     "postcss": "8.4.23",
